# tensorboardprotobuf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  dockerfile  main.cpp
tbproto/: CMakeLists.txt  crc32c.cpp  crc32c.h  event.proto  record.cpp  record.h  run.cpp  run.h  types.h  utils.cpp
tbproto/tensorflow/: crc32c.cpp  crc32c.h
util/: dockerfile
