include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER ${ProtoFiles})
add_library(tbproto SHARED ${PROTO_HEADER} ${PROTO_SRC})
target_link_libraries(tbproto ${Protobuf_LIBRARIES})
